# furiosa-feature-discovery

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.ubi  Makefile  README.md  README.rst  furiosa-feature-discovery-ds.yaml  go.mod  go.sum  nfd.yaml
.github/workflows/: build-and-test-golang-project.yml  build-and-test-rust-project.yml  build_container_image.yml  build_container_rhel_ubi_image.yml  ghcr_rel_container_image.yaml  golang.yaml  public_rel_container_image.yml  public_rel_helm_chart.yaml  rel_container_image.yaml  rust.yml
deployments/helm/: values.yaml
deployments/helm/templates/: _helpers.tpl  daemonset.yaml  serviceaccount.yaml
e2e/: e2e_suite_test.go  e2e_test.rs
src/: feature-discovery.rs  furiosa-feature-discovery.rs  npu.rs
